--- a/index.html
+++ b/index.html
@@ -1,85 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This will show on Google result page as description">
     <title>Juno Webpage</title>
+    <!-- CSS - start -->
+    <link rel="stylesheet" href="css/style.css">
+    <style type="text/css">
+        header {
+            background-color: aquamarine;
+        }
+    </style>
+    <!-- CSS - end -->
+
 </head>
+
 <body>
     <!-- header - start -->
     <header style="border: 1px solid red;">
-        logo
-        the menu goes here
+        <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" class="logo-header">
+        <nav>
+            <a href="#">About</a>
+            <a href="#">Features</a>
+            <a href="#">Contact</a>
+        </nav>
     </header>
     <!-- header - end -->
 
     <!-- hero - start -->
-    <div style="border: 1px solid yellow;">
+    <section id="hero" style="border: 1px solid yellow; background-color: deepskyblue;">
         <h1>heading 1</h1>
-        <p>paragraph</p>
-        <button>This is the CTA</button> 
-    </div>
+        <p>paragraph <strong>Hello</strong></p>
+        <button>This is the CTA</button>
+    </section>
     <!-- hero - end -->
 
     <!-- blog articles - start  -->
-    <div>
-        <article>
-            Title - Article 1
-            description
-            Avatar Photo
-            Author Namer
+    <section>
+        <article class="home-article">
+            <img>
+            <h3>Title - Article 1</h3>
+            <p>description</p>
+            <div>
+                <img>Avatar Photo
+                <p>Author Name</p>
+            </div>
         </article>
-        <article>
-            Title - Article 2
-            description
-            Avatar Photo
-            Author Namer
+        <article class="home-article">
+            <img>
+            <h3>Title - Article 2</h3>
+            <p>description</p>
+            <div>
+                <img>Avatar Photo
+                <p>Author Name</p>
+            </div>
         </article>
-        <article>
-            Title - Article 3
-            description
-            Avatar Photo
-            Author Namer
+        <article class="home-article">
+            <img>
+            <h3>Title - Article 3</h3>
+            <p>description</p>
+            <div>
+                <img>Avatar Photo
+                <p>Author Name</p>
+            </div>
         </article>
-    </div>
+    </section>
     <!-- blog articles - end -->
 
     <!-- features - start -->
-    <div>
-        Feature 1
-        Feature 2
-        Feature 3
-        Feature 4
-    </div>
+    <section>
+        <!-- feature 1 - start -->
+        <div>
+            <img>
+            <div>
+                <h4>Feautre 1</h4>
+                <p>Feat Description</p>
+            </div>
+        </div>
+        <!-- feature 1 - end -->
+
+        <!-- feature 2 - start -->
+        <div>
+            <img>
+            <div>
+                <h4>Feautre 2</h4>
+                <p>Feat Description</p>
+            </div>
+        </div>
+        <!-- feature 2 - end -->
+
+        <!-- feature 3 - start -->
+        <div>
+            <img>
+            <div>
+                <h4>Feautre 3</h4>
+                <p>Feat Description</p>
+            </div>
+        </div>
+        <!-- feature 3 - end -->
+
+        <!-- feature 4 - start -->
+        <div>
+            <img>
+            <div>
+                <h4>Feautre 4</h4>
+                <p>Feat Description</p>
+            </div>
+        </div>
+        <!-- feature 4 - end -->
+    </section>
     <!-- features - end -->
 
     <!-- contact - start  -->
-    <div>
-        Contact (Title - Heading 3)
-        Form name
-        Form Email
-        Form Message
-    </div>
+    <section>
+        <h3>Contact (Title - Heading 3)</h3>
+        <div>
+            <form action="#">
+                <input type="text">Form name<br><br>
+                <input type="email"> Email<br><br>
+                <textarea rows="5" cols="50">Write your message</textarea><br><br>
+                <input type="submit" value="Send Message">
+            </form>
+        </div>
+    </section>
     <!-- contact - end -->
 
     <!-- footer - start -->
     <footer>
-        About
-        features
-        Contact Us
+        <div>
+            <a href="#">About</a>
+            <a href="#">Features</a>
+            <a href="mailto:juno@juno.pro">Email</a>
+            <a href="tel:+5511999004400">Phone</a>
+        </div>
 
-        Social Media
-        Instagram
-        Facebook
-        Twitter
+        <div>
+            <h5>Follow Us</h5>
+            <a href="https://www.instagram.com/junojo" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/junojo">Facebook</a>
+            <a href="https://www.twitter.com/junojo">Twitter</a>
+        </div>
 
     </footer>
     <!-- footer - end -->
-    
 
-     
+
+
 
 </body>
+
 </html>
