Icons & Beautiful content

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     </style>
     <!-- CSS - end -->
 
+    <!-- Google Fonts Welcome to my code -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&family=Krona+One&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/bff7ea3e36.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -31,7 +38,7 @@
     <!-- header - end -->
 
     <!-- hero - start -->
-    <section id="hero" style="border: 1px solid yellow; background-color: deepskyblue;">
+    <section id="hero">
         <h1>heading 1</h1>
         <p>paragraph <strong>Hello</strong></p>
         <button>This is the CTA</button>
@@ -41,29 +48,29 @@
     <!-- blog articles - start  -->
     <section>
         <article class="home-article">
-            <img>
+            <img src="/img/ball-park-brand-ssKZHiHOtxA-unsplash.jpg" class="img-article">
             <h3>Title - Article 1</h3>
             <p>description</p>
             <div>
-                <img>Avatar Photo
+                <img src="/img/avatar_01.png" alt="Photo of Author Juno">
                 <p>Author Name</p>
             </div>
         </article>
         <article class="home-article">
-            <img>
+            <img src="/img/fahmi-fakhrudin-nzyzAUsbV0M-unsplash.jpg" class="img-article">
             <h3>Title - Article 2</h3>
             <p>description</p>
             <div>
-                <img>Avatar Photo
+                <img src="img/avatar_02.png" alt="Photo of Ina">
                 <p>Author Name</p>
             </div>
         </article>
         <article class="home-article">
-            <img>
+            <img src="/img/luke-porter-DqrqLkM1CMU-unsplash.jpg" class="img-article">
             <h3>Title - Article 3</h3>
             <p>description</p>
             <div>
-                <img>Avatar Photo
+                <img src="/img/avatar_03.png" alt="Julien">
                 <p>Author Name</p>
             </div>
         </article>
@@ -74,9 +81,11 @@
     <section>
         <!-- feature 1 - start -->
         <div>
-            <img>
+            <span class="icon-feature">
+                <i class="fas fa-air-freshener"></i>
+            </span>
             <div>
-                <h4>Feautre 1</h4>
+                <h4>Super Fresh</h4>
                 <p>Feat Description</p>
             </div>
         </div>
@@ -84,9 +93,11 @@
 
         <!-- feature 2 - start -->
         <div>
-            <img>
+            <span class="icon-feature">
+                <i class="fas fa-atom"></i>
+            </span>
             <div>
-                <h4>Feautre 2</h4>
+                <h4>Atomic Design</h4>
                 <p>Feat Description</p>
             </div>
         </div>
@@ -94,9 +105,11 @@
 
         <!-- feature 3 - start -->
         <div>
-            <img>
+            <span class="icon-feature">
+                <i class="fas fa-fish"></i>
+            </span>
             <div>
-                <h4>Feautre 3</h4>
+                <h4>Fish</h4>
                 <p>Feat Description</p>
             </div>
         </div>
@@ -104,9 +117,11 @@
 
         <!-- feature 4 - start -->
         <div>
-            <img>
+            <span class="icon-feature">
+                <i class="fas fa-peace"></i>
+            </span>
             <div>
-                <h4>Feautre 4</h4>
+                <h4>Peace & Love</h4>
                 <p>Feat Description</p>
             </div>
         </div>
@@ -139,9 +154,11 @@
 
         <div>
             <h5>Follow Us</h5>
-            <a href="https://www.instagram.com/junojo" target="_blank">Instagram</a>
-            <a href="https://www.facebook.com/junojo">Facebook</a>
-            <a href="https://www.twitter.com/junojo">Twitter</a>
+            <a href="https://www.instagram.com/junojo" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.facebook.com/junojo"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="https://www.twitter.com/junojo"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="https://www.medium.com/junojo"><i class="fab fa-medium-m fa-2x"></i></a>
+            <a href="https://www.behance.com/junojo"><i class="fab fa-behance fa-2x"></i></a>
         </div>
 
     </footer>
